--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                             C#, .NET framework, SQL, Entity Framework, Angular, SASS, JavaScript, TypeScript, Git.</span>
                         <span>
                             <span class="professional-timeline__technologies__subtitle">Tools: </span>
-                            Visual Studio, Postman and DBeaver.
+                            Visual Studio, Azure, Postman and DBeaver.
                         </span>
                         <span>
                             <span class="professional-timeline__technologies__subtitle">Projects: </span>
