fixed some technologies

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                 </div>
                 <div class="icon-container">
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/microsoftsqlserver/microsoftsqlserver-plain.svg" />
-                    <span>Microsoft SQL</span>
+                    <span>MSSQL</span>
                 </div>
                 <div class="icon-container">
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/dot-net/dot-net-original.svg" />
@@ -261,7 +261,7 @@
                 </div>
                 <div class="icon-container">
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/visualstudio/visualstudio-plain.svg" />
-                    <span>Visual Studio</span>
+                    <span>VisualStudio</span>
                 </div>
                 <div class="icon-container">
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/slack/slack-original.svg" />
@@ -294,7 +294,7 @@
                         <strong class="professional-timeline__academy-name">Blazar Academy</strong> 
                         <span>
                             <span class="professional-timeline__technologies__subtitle">Technologies: </span>
-                            C#, .NET framework, SQL, Entity Framework, Angular, SASS, JavaScript, TypeScript, Git.</span>
+                            C#, .NET framework, Microsoft SQL Server, Entity Framework, Angular, SASS, JavaScript, TypeScript, Git.</span>
                         <span>
                             <span class="professional-timeline__technologies__subtitle">Tools: </span>
                             Visual Studio, Azure, Postman and DBeaver.
