--- a/portfolio-battleship.html
+++ b/portfolio-battleship.html
@@ -84,7 +84,7 @@
                     </div>
                     <div class="icon-container">
                         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/microsoftsqlserver/microsoftsqlserver-plain.svg" />
-                        <span>Microsoft SQL</span>
+                        <span>MSSQL</span>
                     </div>
                     <div class="icon-container">
                         <img src="./img/c-sharp-logo.svg" />
@@ -96,7 +96,7 @@
                     </div>
                     <div class="icon-container">
                         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/visualstudio/visualstudio-plain.svg" />
-                        <span>Visual Studio</span>
+                        <span>VisualStudio</span>
                     </div>
                     <div class="icon-container">
                         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" />
