--- a/portfolio-battleship.html
+++ b/portfolio-battleship.html
@@ -177,7 +177,7 @@
             <br/>
             
             <p>This game was intended to be played in the same physical place, on the same computer.</p>
-            <p>It can be played by 2 people. In this case each person will belong to a different "group", just like in the original Battelship game. But it can be played by up to 6 people. In this cooperative version of the game, groups are randomly assigned and each group has at least 1 player.</p>
+            <p>It can be played by 2 people. In this case each person will belong to a different "team", just like in the original Battelship game. But it can be played by up to 6 people. In this cooperative version of the game, teams are randomly assigned and each team has at least 1 player.</p>
             <p>The team that wins is the team that manages to sink the entire fleet of ships of the opposing team.</p>
 
             <p>If you want to know more about this project do not hesitate to check it out. Here I leave you the deployment and the GitHub respository links:</p>
