added technology learned and fixed some paragraphs

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                <p>I'm a responsible and proactive person who pays a lot of attention to detail. I consider myself to have emotional intelligence. Fan of planning and organization. Absolute team player!</p>
                <p>I graduated in Business Administration in 2019 and was interested in learning new technologies so at first I started studying Web Development independently (Feb 2022) until I joined <a class="link" href="https://www.soyhenry.com/webfullstack" target="_blank">Henry's Full Stack Development Bootcamp</a> (Aug 2022) to acquire and develop soft skills, meet new people, participate in complex projects and gain confidence in myself and my skills to enter the job market.</p>
                <p>Most recently, I completed <a class="link" href="https://blazargroup.com/it/academy/" target="_blank">Blazar Academy</a> (Apr 2023) offered by Blazar Group where I meet great people, improved my italian and made a final full stack group project with all the new learned technologies.</p>
-               <p><strong>Fan facts:</strong> I lived in Argentina my whole life until October 2021 when I moved to Italy. I speak 3 languages: Spanish, English and Italian. And also I play golf!</p>
+               <p><strong>Fan facts:</strong> I lived in Argentina my whole life until October 2021 when I moved to Italy. I speak 3 languages: Spanish, English and Italian. Also, I play golf!</p>
            </div>
            
            <img src="img/alexia/dev-alexia-03.jpg" alt="Alexía in the park" class="about-me__img">
@@ -236,12 +236,16 @@
                     <span>Express</span>
                 </div>
                 <div class="icon-container">
-                    <img src="./img/c-sharp-logo.svg" />
+                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/csharp/csharp-original.svg" />
                     <span>C#</span>
                 </div>
                 <div class="icon-container">
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/microsoftsqlserver/microsoftsqlserver-plain.svg" />
                     <span>MSSQL</span>
+                </div>
+                <div class="icon-container">
+                    <img src="./img/dbeaver-icon.png" />
+                    <span>DBeaver</span>
                 </div>
                 <div class="icon-container">
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/dot-net/dot-net-original.svg" />
@@ -285,7 +289,7 @@
         <!-- Professional timeline -->
         <section class="professional-timeline" id="work">
             <h2 class="section__title section__title--professional-timeline">My professional timeline</h2>
-            <p class="section__subtitle section__subtitle--professional-timeline">The technologies learned over the years</p>
+            <p class="section__subtitle section__subtitle--professional-timeline">Technologies learned over the years</p>
                    
             <div class="professional-timeline__body">
                 <div class="professional-timeline__item">
@@ -293,15 +297,16 @@
                     <p class="professional-timeline__technologies">
                         <strong class="professional-timeline__academy-name">Blazar Academy</strong> 
                         <span>
-                            <span class="professional-timeline__technologies__subtitle">Technologies: </span>
-                            C#, .NET framework, Microsoft SQL Server, Entity Framework, Angular, SASS, JavaScript, TypeScript, Git.</span>
+                            <span class="professional-timeline__technologies__subtitle">Technologies:</span>
+                             C#, .NET framework, Microsoft SQL Server, Entity Framework, Angular, SASS, JavaScript, TypeScript, Git.
+                            </span>
                         <span>
-                            <span class="professional-timeline__technologies__subtitle">Tools: </span>
-                            Visual Studio, Azure, Postman and DBeaver.
+                            <span class="professional-timeline__technologies__subtitle">Tools:</span>
+                             Visual Studio, Azure, Postman and DBeaver.
                         </span>
                         <span>
-                            <span class="professional-timeline__technologies__subtitle">Projects: </span>
-                            Battleship.
+                            <span class="professional-timeline__technologies__subtitle">Projects:</span>
+                             Battleship.
                         </span>
                     </p>
                 </div>
@@ -310,16 +315,16 @@
                     <p class="professional-timeline__technologies">
                         <strong class="professional-timeline__academy-name">Henry Bootcamp</strong>
                         <span>
-                            <span class="professional-timeline__technologies__subtitle">Technologies: </span>
-                            JavaScript, TypeScript, React, Redux, ReduxToolkit, NextJS, CSS, LESS, NodeJS, Express, SQL, Sequelize, PostgreSQL, Prisma, Testing, Git, Git Flow, Trello, SCRUM.
+                            <span class="professional-timeline__technologies__subtitle">Technologies:</span>
+                             JavaScript, TypeScript, React, Redux, ReduxToolkit, NextJS, CSS, LESS, NodeJS, Express, SQL, Sequelize, PostgreSQL, Prisma, Testing, Git, Git Flow, Trello, SCRUM.
                         </span>
                         <span>
-                            <span class="professional-timeline__technologies__subtitle">Tools: </span>
-                            Visual Studio Code and Insomnia.
+                            <span class="professional-timeline__technologies__subtitle">Tools:</span>
+                             Visual Studio Code and Insomnia.
                         </span>
                         <span>
-                            <span class="professional-timeline__technologies__subtitle">Projects: </span> 
-                            Pokemon, Sirun Pätisserie.
+                            <span class="professional-timeline__technologies__subtitle">Projects:</span> 
+                             Pokemon, Sirun Pätisserie.
                         </span>
                     </p>
                 </div>
@@ -328,16 +333,16 @@
                     <p class="professional-timeline__technologies">
                         <strong class="professional-timeline__academy-name">Scrimba: The Frontend Developer Career Path</strong>
                         <span>
-                            <span class="professional-timeline__technologies__subtitle">Technologies: </span>
-                            JavaScript, React, CSS, Git, Web Design, Responsive Design, UI Design, Web Architecture, APIs. 
+                            <span class="professional-timeline__technologies__subtitle">Technologies:</span>
+                             JavaScript, React, CSS, Git, Web Design, Responsive Design, UI Design, Web Architecture, APIs. 
                         </span>
                         <span>
-                            <span class="professional-timeline__technologies__subtitle">Tools: </span>
-                            Visual Studio Code.
+                            <span class="professional-timeline__technologies__subtitle">Tools:</span>
+                             Visual Studio Code.
                         </span>
                         <span>
-                            <span class="professional-timeline__technologies__subtitle">Projects: </span>
-                            Tindog, Tenzies, Quizzical, Movies Watchlist, Space Travel.
+                            <span class="professional-timeline__technologies__subtitle">Projects:</span>
+                             Tindog, Tenzies, Quizzical, Movies Watchlist, Space Travel.
                         </span>
                     </p>
                 </div>
