--- a/portfolio-battleship.html
+++ b/portfolio-battleship.html
@@ -87,7 +87,7 @@
                         <span>MSSQL</span>
                     </div>
                     <div class="icon-container">
-                        <img src="./img/c-sharp-logo.svg" />
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/csharp/csharp-original.svg" />
                         <span>C#</span>
                     </div>
                     <div class="icon-container">
@@ -132,9 +132,6 @@
                 </div>
                 <div class="carousel-item">
                     <img src="img/battleship/battleship-position-ships-2.png" alt="" />
-                </div>
-                <div class="carousel-item">
-                    <img src="img/battleship/battleship-position-ships-3.png" alt="" />
                 </div>
                 <div class="carousel-item">
                     <img src="img/battleship/battleship-position-ships-4.png" alt="" />
