added more technologies

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                 </div>
                 <div class="icon-container">
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg" />
-                    <span>ReactJS</span>
+                    <span>React</span>
                 </div>
                 <div class="icon-container">
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/redux/redux-original.svg" />
@@ -201,7 +201,7 @@
                 </div>
                 <div class="icon-container">
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nextjs/nextjs-original.svg" />
-                    <span>NextJS</span>
+                    <span>Next</span>
                 </div>
                 <div class="icon-container">
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/angularjs/angularjs-original.svg" />
@@ -228,8 +228,16 @@
                     <span>PostreSQL</span>
                 </div>
                 <div class="icon-container">
+                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/microsoftsqlserver/microsoftsqlserver-plain.svg" />
+                    <span>MSSQL</span>
+                </div>
+                <div class="icon-container">
+                    <img src="./img/icons/dbeaver-icon.png" />
+                    <span>DBeaver</span>
+                </div>
+                <div class="icon-container">
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-original.svg" />
-                    <span>NodeJS</span>
+                    <span>Node</span>
                 </div>
                 <div class="icon-container">
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/express/express-original.svg" />
@@ -240,16 +248,24 @@
                     <span>C#</span>
                 </div>
                 <div class="icon-container">
-                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/microsoftsqlserver/microsoftsqlserver-plain.svg" />
-                    <span>MSSQL</span>
-                </div>
-                <div class="icon-container">
-                    <img src="./img/dbeaver-icon.png" />
-                    <span>DBeaver</span>
-                </div>
-                <div class="icon-container">
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/dot-net/dot-net-original.svg" />
                     <span>.NET</span>
+                </div>
+                <div class="icon-container">
+                    <img src="./img/icons/vercel-icon.svg" />
+                    <span>Vercel</span>
+                </div>
+                <div class="icon-container">
+                    <img src="./img/icons/render-logo.png" />
+                    <span>Render</span>
+                </div>
+                <div class="icon-container">
+                    <img src="./img/icons/netlify-logo.svg" />
+                    <span>Netlify</span>
+                </div>
+                <div class="icon-container">
+                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/azure/azure-original.svg" />
+                    <span>Azure</span>
                 </div>
                 <div class="icon-container">
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" />
@@ -272,7 +288,7 @@
                     <span>Slack</span>
                 </div>
                 <div class="icon-container">
-                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/discordjs/discordjs-original.svg" />
+                    <img src="./img/icons/discord-icon.svg" />
                     <span>Discord</span>
                 </div>
                 <div class="icon-container">
