--- a/portfolio-battleship.html
+++ b/portfolio-battleship.html
@@ -95,8 +95,8 @@
                         <span>.NET</span>
                     </div>
                     <div class="icon-container">
-                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/visualstudio/visualstudio-plain.svg" />
-                        <span>VisualStudio</span>
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/azure/azure-original.svg" />
+                        <span>Azure</span>
                     </div>
                     <div class="icon-container">
                         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" />
@@ -107,7 +107,11 @@
                         <span>Git</span>
                     </div>
                     <div class="icon-container">
-                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/discordjs/discordjs-original.svg" />
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/visualstudio/visualstudio-plain.svg" />
+                        <span>VisualStudio</span>
+                    </div>
+                    <div class="icon-container">
+                        <img src="./img/icons/discord-icon.svg" />
                         <span>Discord</span>
                     </div>
                     <div class="icon-container">
