--- a/portfolio-sirun.html
+++ b/portfolio-sirun.html
@@ -74,28 +74,32 @@
                         <span>CSS3</span>
                     </div>
                     <div class="icon-container">
-                        <img src="/img/framer-motion-logo.png" />
+                        <img src="/img/icons/framer-motion-logo.png" />
                         <span>FramerMotion</span>
                     </div>
                     <div class="icon-container">
                         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nextjs/nextjs-original.svg" />
-                        <span>Nextjs</span>
+                        <span>Next</span>
                     </div>
                     <div class="icon-container">
                         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/redux/redux-original.svg" />
                         <span>ReduxToolkit</span>
                     </div>
                     <div class="icon-container">
-                        <img src="/img/prisma-logo.png" />
+                        <img src="/img/icons/prisma-logo.png" />
                         <span>Prisma</span>
                     </div>
                     <div class="icon-container">
                         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-original.svg" />
-                        <span>NodeJS</span>
+                        <span>Node</span>
                     </div>
                     <div class="icon-container">
                         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/express/express-original.svg" />
                         <span>Express</span>
+                    </div>
+                    <div class="icon-container">
+                        <img src="./img/icons/vercel-icon.svg" />
+                        <span>Vercel</span>
                     </div>
                     <div class="icon-container">
                         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" />
@@ -114,7 +118,7 @@
                         <span>Slack</span>
                     </div>
                     <div class="icon-container">
-                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/discordjs/discordjs-original.svg" />
+                        <img src="./img/icons/discord-icon.svg" />
                         <span>Discord</span>
                     </div>
                     <div class="icon-container">
