--- a/portfolio-pokemon.html
+++ b/portfolio-pokemon.html
@@ -68,7 +68,7 @@
                     </div>
                     <div class="icon-container">
                         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg" />
-                        <span>ReactJS</span>
+                        <span>React</span>
                     </div>
                     <div class="icon-container">
                         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/redux/redux-original.svg" />
@@ -84,11 +84,19 @@
                     </div>
                     <div class="icon-container">
                         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-original.svg" />
-                        <span>NodeJS</span>
+                        <span>Node</span>
                     </div>
                     <div class="icon-container">
                         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/express/express-original.svg" />
                         <span>Express</span>
+                    </div>
+                    <div class="icon-container">
+                        <img src="./img/icons/render-logo.png" />
+                        <span>Render</span>
+                    </div>
+                    <div class="icon-container">
+                        <img src="./img/icons/netlify-logo.svg" />
+                        <span>Netlify</span>
                     </div>
                     <div class="icon-container">
                         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" />
@@ -103,7 +111,7 @@
                         <span>VSCode</span>
                     </div>
                     <div class="icon-container">
-                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/discordjs/discordjs-original.svg" />
+                        <img src="./img/icons/discord-icon.svg" />
                         <span>Discord</span>
                     </div>
                 </div>
