--- a/index.html
+++ b/index.html
@@ -251,6 +251,14 @@
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/dot-net/dot-net-original.svg" />
                     <span>.NET</span>
                 </div>
+                 <div class="icon-container">
+                    <img src="./img/icons/postman-logo.svg" />
+                    <span>Postman</span>
+                </div>
+                <div class="icon-container">
+                    <img src="./img/icons/insomnia-logo.png" />
+                    <span>Insomnia</span>
+                </div>
                 <div class="icon-container">
                     <img src="./img/icons/vercel-icon.svg" />
                     <span>Vercel</span>
