--- a/portfolio-movies.html
+++ b/portfolio-movies.html
@@ -144,11 +144,11 @@
                         <i class="fab fa-instagram"></i>
                     </a>
                 </li>
-                <li class="social-list__item">
+                <!-- <li class="social-list__item">
                     <a class="social-list__link" target="_blank" href="https://twitter.com/AleMilanesio">
                         <i class="fab fa-twitter"></i>
                     </a>
-                </li>
+                </li> -->
             </ul>
         </footer>
         
