--- a/portfolio-books-library.html
+++ b/portfolio-books-library.html
@@ -49,7 +49,7 @@
             <h1 class="section__title section__title--intro animate-pop-in">
                 Books <strong class="animate-pop-in">Library</strong>
             </h1>
-            <p class="section__subtitle section__subtitle--intro animate-pop-in">database</p>
+            <p class="section__subtitle section__subtitle--intro animate-pop-in">books database</p>
             <img src="img/books-library/books-library-logo.jpg" alt="" class="intro__img animate-slide-right">
         </section>
         
