--- a/portfolio-home-page-copy.html
+++ b/portfolio-home-page-copy.html
@@ -132,7 +132,7 @@
 
             <div class="project-btns-container">
                 <!-- <a href="https://polite-sky-0deac7e03.3.azurestaticapps.net/" target="_blank" class="btn btn-space">Battleship</a> -->
-                <!-- <a href="https://github.com/falker47/BattleShip-frontend" target="_blank" class="btn btn-space">Deployment link</a> -->
+                <a href="https://alexiamilanesio.github.io/page-copy/" target="_blank" class="btn btn-space">Home page</a>
                 <a href="https://github.com/AlexiaMilanesio/blazar-academy-frontend/tree/main/lezione-css" target="_blank" class="btn">GitHub repository</a>
             </div>
             <br/>
