spelling mistake fixed

--- a/portfolio-home-page-copy.html
+++ b/portfolio-home-page-copy.html
@@ -55,7 +55,7 @@
         
         <div class="portfolio-item-individual">
             <p style="text-align: center;"><strong>Blazar Academy - Project</strong></p>
-            <p>This home page was a project for the Blazar Academy (Milan, Italy). This home page was a existing design recreated using just CSS to practice responsive design.</p>
+            <p>This home page was a project for the Blazar Academy (Milan, Italy). This home page was an existing design recreated using just CSS to practice responsive design.</p>
 
             <div class="portfolio-skills-container">
                 <p class="portfolio-skills__subtitle">Tools and technologies used for this project</p>
