added work experience

--- a/index.html
+++ b/index.html
@@ -90,11 +90,16 @@
                <p>Hi there, I'm Alexía! I'm a Full Stack Developer with a Business Administration Degree.</p>
                <p>I'm a responsible and proactive person who pays a lot of attention to detail. I consider myself to have emotional intelligence. Fan of planning and organization. Absolute team player!</p>
                <p>I graduated in Business Administration in 2019 and was interested in learning new technologies so at first I started studying Web Development independently (Feb 2022) until I joined <a class="link" href="https://www.soyhenry.com/webfullstack" target="_blank">Henry's Full Stack Development Bootcamp</a> (Aug 2022) to acquire and develop soft skills, meet new people, participate in complex projects and gain confidence in myself and my skills to enter the job market.</p>
-               <p>Most recently, I completed <a class="link" href="https://blazargroup.com/it/academy/" target="_blank">Blazar Academy</a> (Apr 2023) offered by Blazar Group where I meet great people, improved my italian and made a final full stack group project with all the new learned technologies.</p>
-               <p><strong>Fan facts:</strong> I lived in Argentina my whole life until October 2021 when I moved to Italy. I speak 3 languages: Spanish, English and Italian. Also, I play golf!</p>
+               <p>I completed <a class="link" href="https://blazargroup.com/it/academy/" target="_blank">Blazar Academy</a> (Apr 2023) offered by Blazar Group where I meet great people, improved my italian and made a final full stack group project with all the new learned technologies.</p>
+               <p>I am currently working at <a class="link" href="https://blazargroup.com/it/">Blazar Group</a> as a Full Stack Developer (June 2023 - Present):
+                <ul>
+                    <li>I worked for <a class="link" href="https://www.reply.com/cluster-reply/en/">Cluster Reply</a> as a Junior .NET Developer in the Reale Mutua Assicurazioni project from June to September 2023.</li>
+                </ul> 
+              </p>
            </div>
            
            <img src="img/alexia/dev-alexia-03.jpg" alt="Alexía in the park" class="about-me__img">
+           <p class="about-me__side-note"><strong>Fan facts:</strong> I lived in Argentina my whole life until October 2021 when I moved to Italy. I speak 3 languages: Spanish, English and Italian. Also, I play golf!</p>
         </section>
    
 
@@ -216,6 +221,10 @@
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/angularjs/angularjs-original.svg" />
                     <span>Angular</span>
                 </div>
+                <div class="icon-container">
+                    <img src="./img/icons/dynamics-CRM-logo.png" style="width: 4.5em;" />
+                    <span>MS CRM D 365</span>
+                </div>
                 <!-- <div class="icon-container">
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mongodb/mongodb-original.svg" />
                     <span>MongoDB</span>
@@ -322,16 +331,37 @@
         <!-- Professional timeline -->
         <section class="professional-timeline" id="work">
             <h2 class="section__title section__title--professional-timeline">My professional timeline</h2>
-            <p class="section__subtitle section__subtitle--professional-timeline">Technologies learned over the years</p>
+            <p class="section__subtitle section__subtitle--professional-timeline">
+                <!-- Technologies learned over the years -->
+            </p>
                    
             <div class="professional-timeline__body">
                 <div class="professional-timeline__item">
+                    <p class="professional-timeline__year">June 2023 - Present</p>
+                    <p class="professional-timeline__technologies">
+                        <strong class="professional-timeline__academy-name">Blazar Group</strong> 
+                        <span class="professional-timeline__org">REPLY CLUSTER</span>
+                        <span class="professional-timeline__org-item">
+                            <span class="professional-timeline__technologies__subtitle">Project:</span>
+                             Reale Mutua Assicurazioni
+                        </span>
+                        <span class="professional-timeline__org-item">
+                            <span class="professional-timeline__technologies__subtitle">Description:</span>
+                             Microsoft CRM Dynamics 365 system migration and update.
+                        </span>
+                        <span class="professional-timeline__org-item">
+                            <span class="professional-timeline__technologies__subtitle">Technologies:</span>
+                             C#, .NET Framework (4.6.2 - 4.8), Microsoft CRM Dynamics 365, JavaScript, Git, DevOps.
+                        </span>
+                    </p>
+                </div>
+                <div class="professional-timeline__item">
                     <p class="professional-timeline__year">March 2023 - Aprile 2023</p>
                     <p class="professional-timeline__technologies">
-                        <strong class="professional-timeline__academy-name">Blazar Academy</strong> 
+                        <strong class="professional-timeline__academy-name"><span style="color: grey;">[Academic]</span> Blazar Academy</strong>        
                         <span>
                             <span class="professional-timeline__technologies__subtitle">Technologies:</span>
-                             C#, .NET framework, Microsoft SQL Server, Entity Framework, Angular, SASS, JavaScript, TypeScript, Git.
+                             C#, .NET Core, Microsoft SQL Server, Entity Framework, Angular, SASS, JavaScript, TypeScript, Git.
                             </span>
                         <span>
                         <span class="professional-timeline__technologies__subtitle">Tools:</span>
@@ -348,7 +378,7 @@
                 <div class="professional-timeline__item">
                     <p class="professional-timeline__year">July 2022 - December 2022</p>
                     <p class="professional-timeline__technologies">
-                        <strong class="professional-timeline__academy-name">Henry Bootcamp</strong>
+                        <strong class="professional-timeline__academy-name"><span style="color: grey;">[Academic]</span> Henry Full Stack Developement Bootcamp</strong>
                         <span>
                             <span class="professional-timeline__technologies__subtitle">Technologies:</span>
                              JavaScript, TypeScript, React, Redux, ReduxToolkit, NextJS, CSS, LESS, NodeJS, Express, SQL, Sequelize, PostgreSQL, Prisma, Testing, Git, Git Flow, Trello, SCRUM.
@@ -366,7 +396,7 @@
                 <div class="professional-timeline__item">
                     <p class="professional-timeline__year">May 2022 - September 2022</p>
                     <p class="professional-timeline__technologies">
-                        <strong class="professional-timeline__academy-name">Scrimba: The Frontend Developer Career Path</strong>
+                        <strong class="professional-timeline__academy-name"><span style="color: grey;">[Academic]</span> Scrimba: The Frontend Developer Career Path</strong>
                         <span>
                             <span class="professional-timeline__technologies__subtitle">Technologies:</span>
                              JavaScript, React, CSS, Git, Web Design, Responsive Design, UI Design, Web Architecture, APIs. 
