[Update] Added item to professional timeline

--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
                     <p class="professional-timeline__year">June 2023 - Present</p>
                     <p class="professional-timeline__technologies">
                         <strong class="professional-timeline__academy-name">Blazar Group</strong> 
-                        <span class="professional-timeline__org">REPLY CLUSTER</span>
+                        <span class="professional-timeline__org">REPLY CLUSTER [Jun 2023 - Sept 2023]</span>
                         <span class="professional-timeline__org-item">
                             <span class="professional-timeline__technologies__subtitle">Project:</span>
                              Reale Mutua Assicurazioni
@@ -352,6 +352,20 @@
                         <span class="professional-timeline__org-item">
                             <span class="professional-timeline__technologies__subtitle">Technologies:</span>
                              C#, .NET Framework (4.6.2 - 4.8), Microsoft CRM Dynamics 365, JavaScript, Git, DevOps.
+                        </span>
+
+                        <span class="professional-timeline__org">REPLY CLUSTER [Nov 2023 - Present]</span>
+                        <span class="professional-timeline__org-item">
+                            <span class="professional-timeline__technologies__subtitle">Project:</span>
+                             Maire Tecnimont
+                        </span>
+                        <span class="professional-timeline__org-item">
+                            <span class="professional-timeline__technologies__subtitle">Description:</span>
+                             AMS Service Now, Dynamics 365 Field Service
+                        </span>
+                        <span class="professional-timeline__org-item">
+                            <span class="professional-timeline__technologies__subtitle">Technologies:</span>
+                             Microsoft CRM Dynamics 365, JavaScript, Power Automate, Logic Apps, Azure, Git, Git Kraken, DevOps.
                         </span>
                     </p>
                 </div>
