[Update] Added item to professional timeline

--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
                             <span class="professional-timeline__technologies__subtitle">Technologies:</span>
                              C#, .NET Framework (4.6.2 - 4.8), Microsoft CRM Dynamics 365, JavaScript, Git, DevOps.
                         </span>
-
+                        <br/>
                         <span class="professional-timeline__org">REPLY CLUSTER [Nov 2023 - Present]</span>
                         <span class="professional-timeline__org-item">
                             <span class="professional-timeline__technologies__subtitle">Project:</span>
@@ -375,7 +375,7 @@
                         <strong class="professional-timeline__academy-name"><span style="color: grey;">[Academic]</span> Blazar Academy</strong>        
                         <span>
                             <span class="professional-timeline__technologies__subtitle">Technologies:</span>
-                             C#, .NET Core, Microsoft SQL Server, Entity Framework, Angular, SASS, JavaScript, TypeScript, Git.
+                             C#, .NET Core, Microsoft SQL Server, Entity Framework, Angular, React, SASS, JavaScript, TypeScript, Git.
                             </span>
                         <span>
                         <span class="professional-timeline__technologies__subtitle">Tools:</span>
