[Update] Added item to professional timeline

--- a/index.html
+++ b/index.html
@@ -353,7 +353,25 @@
                             <span class="professional-timeline__technologies__subtitle">Technologies:</span>
                              C#, .NET Framework (4.6.2 - 4.8), Microsoft CRM Dynamics 365, JavaScript, Git, DevOps.
                         </span>
+
                         <br/>
+
+                        <span class="professional-timeline__org">BLAZAR GROUP [Oct 2023]</span>
+                        <span class="professional-timeline__org-item">
+                            <span class="professional-timeline__technologies__subtitle">Project:</span>
+                             Istat
+                        </span>
+                        <span class="professional-timeline__org-item">
+                            <span class="professional-timeline__technologies__subtitle">Description:</span>
+                             Backend endpoints mock
+                        </span>
+                        <span class="professional-timeline__org-item">
+                            <span class="professional-timeline__technologies__subtitle">Technologies:</span>
+                             React, Mock Sevice Worker, TypeScript, Git, GitHub.
+                        </span>
+
+                        <br/>
+
                         <span class="professional-timeline__org">REPLY CLUSTER [Nov 2023 - Present]</span>
                         <span class="professional-timeline__org-item">
                             <span class="professional-timeline__technologies__subtitle">Project:</span>
