[Update] Added item to professional timeline

--- a/index.html
+++ b/index.html
@@ -94,6 +94,8 @@
                <p>I am currently working at <a class="link" href="https://blazargroup.com/it/">Blazar Group</a> as a Full Stack Developer (June 2023 - Present):
                 <ul>
                     <li>I worked for <a class="link" href="https://www.reply.com/cluster-reply/en/">Cluster Reply</a> as a Junior .NET Developer in the Reale Mutua Assicurazioni project from June to September 2023.</li>
+                    <li>I participated in the Istat project in October 2023 for a Blazar Group's client mocking backend endpoints.</li>
+                    <li>Since November 2023 I am working for <a class="link" href="https://www.reply.com/cluster-reply/en/">Cluster Reply</a> in the Maire Tecnimont and DPM projects.</li>
                 </ul> 
               </p>
            </div>
@@ -367,7 +369,7 @@
                         </span>
                         <span class="professional-timeline__org-item">
                             <span class="professional-timeline__technologies__subtitle">Technologies:</span>
-                             React, Mock Sevice Worker, TypeScript, Git, GitHub.
+                             React, Mock Sevice Worker, TypeScript,Git, GitHub.
                         </span>
 
                         <br/>
