[Update] Added item to professional timeline

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                <p>I'm a responsible and proactive person who pays a lot of attention to detail. I consider myself to have emotional intelligence. Fan of planning and organization. Absolute team player!</p>
                <p>I graduated in Business Administration in 2019 and was interested in learning new technologies so at first I started studying Web Development independently (Feb 2022) until I joined <a class="link" href="https://www.soyhenry.com/webfullstack" target="_blank">Henry's Full Stack Development Bootcamp</a> (Aug 2022) to acquire and develop soft skills, meet new people, participate in complex projects and gain confidence in myself and my skills to enter the job market.</p>
                <p>I completed <a class="link" href="https://blazargroup.com/it/academy/" target="_blank">Blazar Academy</a> (Apr 2023) offered by Blazar Group where I meet great people, improved my italian and made a final full stack group project with all the new learned technologies.</p>
-               <p>I am currently working at <a class="link" href="https://blazargroup.com/it/">Blazar Group</a> as a Full Stack Developer (June 2023 - Present):
+               <p>I am currently working at <a class="link" href="https://blazargroup.com/it/">Blazar Group</a> as a Full Stack Developer (June 2023 - Present).
                 <!-- <ul>
                     <li>I worked for <a class="link" href="https://www.reply.com/cluster-reply/en/">Cluster Reply</a> as a Junior .NET Developer in the Reale Mutua Assicurazioni project from June to September 2023.</li>
                     <li>I participated in the Istat project in October 2023 for a Blazar Group's client mocking backend endpoints.</li>
