[Update] Added item to professional timeline

--- a/index.html
+++ b/index.html
@@ -271,7 +271,15 @@
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/dot-net/dot-net-original.svg" />
                     <span>.NET</span>
                 </div>
-                 <div class="icon-container">
+                <div class="icon-container">
+                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/azure/azure-original.svg" />
+                    <span>Azure</span>
+                </div>
+                <div class="icon-container">
+                    <img src="./img/icons/power-automate-logo.png" />
+                    <span>Power Automate</span>
+                </div>
+                <div class="icon-container">
                     <img src="./img/icons/postman-logo.svg" />
                     <span>Postman</span>
                 </div>
@@ -290,10 +298,6 @@
                 <div class="icon-container">
                     <img src="./img/icons/netlify-logo.svg" />
                     <span>Netlify</span>
-                </div>
-                <div class="icon-container">
-                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/azure/azure-original.svg" />
-                    <span>Azure</span>
                 </div>
                 <div class="icon-container">
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" />
